# posthog

./: .dockerignore  .envrc  .gitignore  .sqlfluff  .stylelintrc.js  .test_dependency_map.json  AGENTS.md  Dockerfile  Dockerfile.dev  Dockerfile.node  Dockerfile.sandbox  ENV_CHANGES_SUMMARY.md  README.md  SANDBOX_FOLLOWUPS.md  ai-events-list-view-routing-removal.md  ai-events-posthog-namespace-issue.md  ai-events-preview-columns-removal.md  ai-events-schema-decisions.md  ai-events-simplify-routing.md  ai-events-table-design-review.md  docker-compose.base.yml  docker-compose.dev-sandboxed-proxy.yml  docker-compose.dev-sandboxed.yml  docker-compose.dev.yml  docker-compose.gateway-test.yml  docker-compose.hobby.yml  docker-compose.multi-node.yml  docker-compose.profiles.yml  docker-compose.sandbox.yml  error_tracking_cache_warming_plan.md  hogli.yaml  mypy-baseline.txt  otel-collector-config.dev.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pr_description.md  pyproject.toml  q2_planning.md  tach.toml  (+2 more)
.claude/: settings.json
.claude/hooks/: check-pr-template.sh  install-tool-versions.sh  migrate-permissions.sh  setup-cloud.sh
.depot/workflows/: _rust-build-images.yml  (+34 more)
.devcontainer/: Dockerfile  on-create.sh
.husky/: post-checkout  pre-commit
.planning/: PROJECT.md  REQUIREMENTS.md
.run/: Celery Beat.run.xml  Celery Threads.run.xml  Celery.run.xml  Plugin Server.run.xml  PostHog.run.xml
.zed/: debug.json
cli/: CHANGELOG.md  Cargo.toml
devenv/: intent-map.yaml
docker/: dev-services.env
docs/: cloud-sandboxes-spec.md
ee/: urls.py
frontend/: jest.config.ts  package.json  snapshots.yml  vite.config.ts
nodejs/: package.json  tsconfig.json
playwright/: README.md  playwright.config.ts
posthog/: conftest.py  errors.py  event_usage.py  middleware.py  schema.py  scopes.py  udf_versioner.py  urls.py  utils.py
products/: README.md  db_routing.yaml
proto/: AGENT.md
rust/: Cargo.toml  README.md
rust/clickhouse-gateway/: Cargo.toml  Dockerfile
rust/clickhouse-gateway/src/: auth.rs  cache.rs  circuit_breaker.rs  circuit_breaker_registry.rs  config.rs  error.rs  lib.rs  main.rs  query.rs  routing.rs  scheduling.rs  state.rs  tagging.rs  team_limits.rs  validation.rs
rust/clickhouse-gateway/tests/: test_cache.rs  test_circuit_breaker.rs  test_query.rs  test_scheduling.rs  test_team_limits.rs
rust/hypercache-server/: Cargo.toml
rust/hypercache-server/src/: config.rs  config_cache.rs  lib.rs  main.rs  router.rs  sanitize.rs  server.rs  test_utils.rs
rust/hypercache-server/src/api/: remote_config.rs  surveys.rs
rust/hypercache-server/tests/: integration_test.rs
scripts/: test-gateway-e2e.sh  test-multi-node.sh
(+3386 files in other folders)
