[package]
name = "clickhouse-gateway"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
envconfig = { workspace = true }
hyper = { workspace = true }
lifecycle = { path = "../common/lifecycle" }
common-alloc = { path = "../common/alloc" }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
redis = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
axum-test = "16"
