[package]
name = "clickhouse-gateway"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
axum = { workspace = true }
envconfig = { workspace = true }
lifecycle = { path = "../common/lifecycle" }
common-alloc = { path = "../common/alloc" }
common-metrics = { path = "../common/metrics" }
metrics = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
tower = { workspace = true }
