[package]
name = "hypercache-server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { workspace = true }
common-alloc = { path = "../common/alloc" }
common-continuous-profiling = { path = "../common/continuous_profiling" }
common-hypercache = { path = "../common/hypercache" }
common-metrics = { path = "../common/metrics" }
common-redis = { path = "../common/redis" }
envconfig = { workspace = true }
health = { path = "../common/health" }
metrics = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
regex = { workspace = true }
url = "2.5"

[lints]
workspace = true
